--- a/gamecenter/style.css
+++ b/gamecenter/style.css
@@ -5,7 +5,7 @@
         font-family: 'Poppins', sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #000; /* 黒背景 */
+        background-color: #fff; /* 黒背景 */
         color: #adff2f; /* 黄緑文字 */
     }
 
